# bank-analysis

./: .gitignore  README.md  TODO.md  analysis.py  app.py  demo.csv  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/bank_analysis/adapters/: calendar_cycle.py  csv_content_loader.py  csv_file_loader.py  csv_loader.py  result_in_memory_store.py  salary_cycle.py  stdout_presenter.py
src/bank_analysis/domain/: analysis.py  dto.py  entities.py  matcher.py  period_splicer.py  value_objects.py
src/bank_analysis/entrypoints/: cli.py
src/bank_analysis/infrastructure/: period_splicer.py
src/bank_analysis/ports/: cycle_grouper.py  loader.py  presenter.py  transaction_repository.py
src/bank_analysis/usecases/: analyze_budget.py  compute_aggregates.py  compute_category_breakdown.py  compute_enhanced_category_breakdown.py  compute_monthly_summary.py  data_loading.py  export_use_case.py  filter_atypical_months.py  filter_transactions.py  full_global_analysis.py
static/: results.css  style.css
static/js/: results.js
static/js/controllers/: SummaryController.js  TransactionsController.js
static/js/services/: DetailsService.js  TransactionsService.js
static/js/utils/: dom.js
templates/: index.html  results.html
tests/: conftest.py
tests/integration/: test_csv_loader_integration.py
tests/unit/: test_csv_content_loader_bom.py  test_domain_analysis.py  test_enhanced_breakdown.py  test_filters.py  test_loader_port_returns_domain.py  test_step1_calendar_summary.py  test_step3_salary_cycle.py  test_step4_usecase_di.py  test_usecase_wiring.py
(+11 files in other folders)
